--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prof. Ajax</h1>
+    <h1>Bem-vindo</h1>
+    <header>
+        <img src="img/img ajax.png" width="1350" height="400">
+        <h1></h1>
+    </header>
 </body>
 </html>
