Adicionei as imagens de c# e java

--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prof. Ajax</h1>
+    <h1>Bem-vindo</h1>
+    <header>
+        <img src="img/img ajax.png" width="1350" height="400">
+    </header> 
+        <p>
+        <font size="4" face="Arial">  
+            Olá, me chamo Ajax, sou formado em TADS, domino dou aulas sobre 4 linguagens de programação, sendo elas: 
+        </font> 
+        </p> <br> <br> <br> 
+        
+        <h1>C#</h1>
+        <img src="img/csharp1-738x430.jpg" width="600" height="400">
+        <p>
+            <font size="4" face="Arial">
+                O C# (leia-se C-Sharp), é uma linguagem de programação orientada a objetos, que foi desenvolvida pela Microsoft e faz parte da plataforma .NET. Embora a linguagem C# tenha sido criada do zero, foi baseada na linguagem C++ e tem muitos elementos da linguagem Pascal e Java.
+            </font>
+        </p>
+            <br>
+            
+        <h1>Java</h1>
+        <img src="img/Javascript-1024x750.png" width="600" height="400">
+
+    </header>
 </body>
 </html>
