Página Home e Músicas finalizadas

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Página Prof. Ajax</title>
 </head>
 <body>
     <h1>Bem-vindo</h1>
@@ -62,9 +62,15 @@ Pode construir aplicativos, criar sites, desenvolver programas, criar jogos em, 
                      Foi criado originalmente por Ross Ihaka e por Robert Gentleman no departamento de Estatística da Universidade de Auckland, Nova Zelândia. <br> <br>
                 </font>
                 </p>
-
+                <hr>
 </body>
 <footer>
-    
+        <font size="4" face="Verdana">
+
+    <a href="index.html">Home</a> &nbsp; &nbsp;
+    <a href="musica.html">Músicas para Programação</a> &nbsp; &nbsp;
+    <a href="aulas.html">Aulas</a> &nbsp; &nbsp;
+    <a href="contato.html">Contato</a><br>
+            </font>   
 </footer>
 </html>
