--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <title>Página Prof. Ajax</title>
 </head>
 <body>
-    <h1>Bem-vindo</h1>
+    <h1>Bem-vindo</h1> <hr>
     <header>
         <img src="img/img ajax.png" width="1350" height="400">
     </header> 
@@ -67,10 +67,10 @@ Pode construir aplicativos, criar sites, desenvolver programas, criar jogos em, 
 <footer>
         <font size="4" face="Verdana">
 
-    <a href="index.html">Home</a> &nbsp; &nbsp;
-    <a href="musica.html">Músicas para Programação</a> &nbsp; &nbsp;
-    <a href="aulas.html">Aulas</a> &nbsp; &nbsp;
-    <a href="contato.html">Contato</a><br>
-            </font>   
+        <strong>Home</strong> &nbsp; &nbsp;
+        <a href="musica.html">Músicas</a> &nbsp; &nbsp;
+        <a href="aulas.html">Aulas</a> &nbsp; &nbsp;
+        <a href="contato.html">Contato</a>
+        </font>   
 </footer>
 </html>
