--- a/musica.html
+++ b/musica.html
@@ -7,7 +7,7 @@
 <body>
     <header> 
        <font size="4" face="Verdana">
-        <h1>Músicas para Programação</h1> 
+        <h1>Músicas para Programação</h1> <hr>
          <p>Músicas para escutar enquanto você codifica:</p> <br> <br>
         </font>
     </header>
@@ -34,8 +34,8 @@
 </body>
 <footer>
     <font size="4" face="Arial">
-<a href="index.html">Home</a> &nbsp; &nbsp;
-<a hred="musica.html">Músicas para Programação</a> &nbsp; &nbsp;
+<a href="home.html">Home</a> &nbsp; &nbsp;
+<strong>Músicas</strong> &nbsp; &nbsp;
 <a href="aulas.html">Aulas</a> &nbsp; &nbsp;
 <a href="contato.html">Contato</a>
     </font>   
