--- a/contato.html
+++ b/contato.html
@@ -24,8 +24,8 @@
         <input type="radio" name="csharp" value="3"> C#<br>
         <input type="radio" name="r" value="4"> R<br><br>
 
-        <strong>Estado: </strong><br>
-        <select name="cid">
+        <strong>Estado: </strong>
+        <select name="cid"> 
             <option value="" hidden>Selecione um item</option>
             <option value="C1">Acre</option>
             <option value="C2">Alagoas</option>
@@ -53,16 +53,17 @@
             <option value="C24">Santa Catarina</option>
             <option value="C25">São Paulo</option>
             <option value="C26">Sergipe</option>
-            <option value="C27">Tocantis</option>  
-        </select>
+            <option value="C27">Tocantis</option>
+        </select> <br><br>
 
-        <br><br><strong>Mensagem:</strong><br>
+        <strong>Mensagem:</strong><br>
         <textarea name="msg" rows="5" cols="40"></textarea>
         <br>
-        <button>Enviar</button>
+        <button>Enviar</button> 
+        <br><br>
      </font>
 </form>
-    <hr>
+    <hr><hr>
 </body>
 <footer>
     <font size="4" face="Verdana">
