--- a/musica.html
+++ b/musica.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <header> 
-       <font size="4" face="Verdana">
+       <font size="5" face="Verdana">
         <h1>Músicas para Programação</h1> <hr>
-         <p>Músicas para escutar enquanto você codifica:</p> <br> <br>
+         <p>Músicas para escutar enquanto você codifica:</p> <hr><hr>
         </font>
     </header>
     
@@ -17,12 +17,13 @@
     </font>
         <img src="img/lofi.jpg" width="400""><br>
         <audio src="musicas/10convert.com_LAKEY-INSPIRED-Chill-Day_3HjG1Y4QpVA.mp3" controls></audio><br> <br>
+        <hr>
 
       
         <font size="2" face="Arial">
-        <h1>Rasperry - Moementum</h1>
+        <h1>Raspberry - Moementum</h1>
         <img src="img/lofi3.jpeg" width="400"><br>
-        <audio src="musicas/10convert.com_Raspberry_yz8EWv9SxyA.mp3" controls></audio><br><br>
+        <audio src="musicas/10convert.com_Raspberry_yz8EWv9SxyA.mp3" controls></audio><hr>
 
     <font size="2" face="Verdana">
         <h1>Hidden Village - Slacker Jack</h1>
@@ -30,7 +31,7 @@
         <img src="img/lofi2.jpg" width="400"><br>
         <audio src="musicas/10convert.com_Hidden-Village_HInzqa5HLII.mp3" controls></audio><br><br>
 
-        <hr>
+        <hr><hr>
 </body>
 <footer>
     <font size="4" face="Arial">
